# CSC284-team-projects

./: .gitignore  Bill_Manager.pro  README.md  desktop.ini  transactionpage.cpp  transactionpage.h  updatecreditor.cpp  updatecreditor.h  updatecreditor.ui
Bank Accounts/: Bank Accounts.vcxproj.filters
Bank Accounts/Debug/: Bank Accounts.exe.recipe  Bank Accounts.ilk  Bank Accounts.vcxproj.FileListAbsolute.txt  vc142.idb
Bank Accounts/Debug/Bank Accounts.tlog/: Bank Accounts.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BankAccounts/: CMakeLists.txt  CheckingAccount.cpp  CheckingAccount.h  GenericAccount.cpp  GenericAccount.h  InactiveAccount.cpp  InactiveAccount.h  SavingsAccount.cpp  SavingsAccount.h  main.cpp
BillManagementProject/: BillManagementProject.sln  CMakeLists.txt  Creditor.cpp  Creditor.h  Login.cpp  Login.h  Notification.cpp  Notification.h  TODO.md  User.cpp  User.h  amalgamate.py  main.cpp
BillManagementProject/BillManagementProject/: BillManagementProject.vcxproj  BillManagementProject.vcxproj.filters  Creditor.cpp  Login.cpp  Login.h  creditor.h
BillManagementProject/BillManagementProject/Debug/: vc142.idb
BillManagementProject/BillManagementProject/Debug/BillMana.868f4fc4.tlog/: CL.command.1.tlog  CL.write.1.tlog
BillManagementProject/Debug/BillMana.868f4fc4.tlog/: BillManagementProject.lastbuildstate  CL.read.1.tlog
BillManagementProject/project_info/: Workflow.txt
